# clockify-cli

./: AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml
.github/homebrew/: clockify-cli.rb
.github/workflows/: publish-homebrew.yml  release.yml
skill/: SKILL.md
src/: api.rs  config.rs  main.rs  models.rs  output.rs  resolve.rs  status_cache.rs  time.rs
src/commands/: add.rs  auth.rs  delete.rs  discard.rs  edit.rs  expenses.rs  log.rs  man.rs  mod.rs  projects.rs  report.rs  skill.rs  start.rs  status.rs  stop.rs  submit.rs  tasks.rs  workspaces.rs
src/tui/: app.rs  input.rs  mod.rs  theme.rs  ui.rs
