[package]
name = "clockify-cli"
version = "1.0.0"
edition = "2024"
description = "A fast terminal client for Clockify time tracking — CLI, TUI, and prompt integration"
repository = "https://github.com/BananaJam/clockify-cli"
homepage = "https://github.com/BananaJam/clockify-cli"
license = "MIT OR Apache-2.0"

[[bin]]
name = "clockify"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"
clap_mangen = "0.2"
colored = "3"
dialoguer = "0.12"
dirs = "6"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
